# policy-llm

./: LICENSE  README.md  chunk_metadata.jsonl  pyproject.toml  vector_store.npz
policy_rag/: app.py  config.py
policy_rag/chunking/: alt_chunker.py  chunker.py
policy_rag/eval/: evaluator.py  run_policy_eval.py
policy_rag/generation/: answerer.py
policy_rag/indexing/: embed_and_store.py  vector_store.py
policy_rag/ingestion/: pdf_loader.py
policy_rag/models/: embed_client.py  llm_client.py  llm_client_lora.py
policy_rag/observability/: wandb_logger.py
policy_rag/retrieval/: retriever.py
policy_rag/validation/: grounding_check.py  pii_scan.py  policy_format_check.py
tests/: conftest.py  test_chunking.py  test_embedding_and_index.py  test_eval.py  test_generation.py  test_grounding.py  test_ingestion.py  test_retrieval.py
